tests/baselines/reference/invalidUndefinedAssignments.errors.txt
==== tests/cases/compiler/invalidUndefinedAssignments.ts (6 errors) ====
    var x: typeof undefined;
    
    enum E { A }
    E = x;
    ~
!!! invalidUndefinedAssignments.ts(4,1): error TS2130: Invalid left-hand side of assignment expression.
    E.A = x;
    ~~~
!!! invalidUndefinedAssignments.ts(5,1): error TS2130: Invalid left-hand side of assignment expression.
    
    class C { foo: string }
    var f: C;
    C = x;
    ~
!!! invalidUndefinedAssignments.ts(9,1): error TS2130: Invalid left-hand side of assignment expression.
    
    interface I { foo: string }
    var g: I;
    g = x;
    I = x;
    ~
!!! invalidUndefinedAssignments.ts(14,1): error TS2095: Could not find symbol 'I'.
    
    module M { export var x = 1; }
    M = x;
    ~
!!! invalidUndefinedAssignments.ts(17,1): error TS2130: Invalid left-hand side of assignment expression.
    
    function i<T>(a: T) { }
    // BUG 767030
    i = x; 
    ~
!!! invalidUndefinedAssignments.ts(21,1): error TS2130: Invalid left-hand side of assignment expression.